@@ -143,7 +143,8 @@ CHARS is a regexp-like character alternative (e.g., \"[)$]\")."
 		 (charset (mail-content-type-get (mm-handle-type handle)
 						 'charset)))
 	    (when (and charset
-		       (setq charset (mm-charset-to-coding-system charset))
+		       (setq charset (mm-charset-to-coding-system
+				      charset nil t))
 		       (not (eq charset 'ascii)))
 	      (insert (prog1
 			  (mm-decode-coding-string (buffer-string) charset)
