@@ -175,7 +175,7 @@
 				  (match-end 2))))
 		    (if (fboundp 'w3-coding-system-for-mime-charset)
 			(w3-coding-system-for-mime-charset bsubstr)
-		      (mm-charset-to-coding-system bsubstr))))
+		      (mm-charset-to-coding-system bsubstr nil t))))
 	    (delete-region (point-min) (point-max))
 	    (insert (mm-decode-string text charset))))
 	(save-window-excursion
@@ -343,9 +343,10 @@
 						'charset)
 			 (symbol-name mail-parse-charset)))
 	    cs)
-	(unless (and charset
-		     (setq cs (mm-charset-to-coding-system charset))
-		     (not (eq cs 'ascii)))
+	(if (and charset
+		 (setq cs (mm-charset-to-coding-system charset nil t))
+		 (not (eq cs 'ascii)))
+	    (setq charset (format "%s" (mm-coding-system-to-mime-charset cs)))
 	  ;; The default.
 	  (setq charset "iso-8859-1"
 		cs 'iso-8859-1))
